# gAlpha2D

./: .gitignore  CMakeLists.txt  DeveloperGuide.txt  GPUDT.sln  GPUDT.vcproj  README.md  README.txt  README_changesForLinux.md  main.cu
gpudt/: gpudt.cpp  gpudt.h  predicates.cpp  predicates.h
gpudt/AlphaShape/: Alpha_Shapes_2D.cu  Alpha_Shapes_2D.h  Visualizer.cu  Visualizer.h  drawBasics.cu  drawBasics.h  error.h  headers.cu  headers.h  kernel.cu  kernel.h  predicates.h
gpudt/Cuda/: common.h  cuda.h  cudaBoundary.cu  cudaCCW.h  cudaConstraint.cu  cudaFlipping.cu  cudaMain.cu  cudaMissing.cu  cudaReconstruction.cu  cudaScanLargeArray.cu  cudaScanLargeArray.h  cudaShifting.cu  cudaVoronoi.cu  kernelVoronoi.h  pba2DHost.cu  pba2DKernel.h
input/: 10000_1.txt  1000_1.txt  alpha.txt  bird.txt
